Automate on surge via github process

--- a/index.html
+++ b/index.html
@@ -19,8 +19,24 @@
         <li>-- Add meaningful comment.</li>
         <li>-- Cilck commit to main</li>
         <li>-- Select branch, Cilck Push origin. That's it.</li>
-        <li></li>
-      </ul>
+        <li>** Automate all things > coomit on hithub, auto deploy on surge **</li>
+        <li>** Webop: build a connection, by using event **</li>
+        <li>6- Deploy on surge</li>
+        <li>-- In cmd type Surge, Check repo is project or not. press enter</li>
+        <li>-- Change name of repo in small caps, which want to deploy. surge link generated.</li>
+        <li>7- Github</li>
+        <li>-- Actions > set up a workflow yourself > main.yml file opened</li>
+        <li>-- change github work flow as per need</li>
+        <li>** Ymal file **</li>
+        <li>-- run-on which OS: windows/unbuntu, better is ubuntu</li>
+<li>-- how to use repo, its public v2</li>
+<li>-- which command wnat to use there.</li>
+<li>--- where to install node , type in uses with its version</li>
+<li>--- where to run. install surge for it</li>      
+<li>--- how to deploy on surge? surge ./ surge-generated link --token {{use generated token}}</li>
+<li>--- in cmd type surge token, copy it, in Github-Repo > Secrets > Generate Secret. save token and use it.</li>
+<li>--- Start Commit yml file, then pull it from github desktop.</li>
+</ul>
     </div>
   </body>
 </html>
