--- a/index.html
+++ b/index.html
@@ -9,34 +9,53 @@
   <body>
     <h5>Development Setup</h5>
     <div>
-      <ul style="list-style-type:none;">
+      <ul style="list-style-type: none">
         <li>1- Use Github for Desktop</li>
-        <li>2- Create "New Repo at desktop". Choose folder where want to create, name it. Created.</li>
-        <li>3- Push on github. "Click "Publish Repo". Name it or leave default. uncheck private if want to publick, Ok . Published</li>
+        <li>
+          2- Create "New Repo at desktop". Choose folder where want to create,
+          name it. Created.
+        </li>
+        <li>
+          3- Push on github. "Click "Publish Repo". Name it or leave default.
+          uncheck private if want to publick, Ok . Published
+        </li>
         <li>4- Work time.</li>
-        <li>-- Create some file. add some data save it. Its ready for commit</li>
+        <li>
+          -- Create some file. add some data save it. Its ready for commit
+        </li>
         <li>5- Github for Desktop</li>
         <li>-- Add meaningful comment.</li>
         <li>-- Cilck commit to main</li>
         <li>-- Select branch, Cilck Push origin. That's it.</li>
-        <li>** Automate all things > coomit on hithub, auto deploy on surge **</li>
+        <li>
+          ** Automate all things > coomit on hithub, auto deploy on surge **
+        </li>
         <li>** Webop: build a connection, by using event **</li>
         <li>6- Deploy on surge</li>
         <li>-- In cmd type Surge, Check repo is project or not. press enter</li>
-        <li>-- Change name of repo in small caps, which want to deploy. surge link generated.</li>
+        <li>
+          -- Change name of repo in small caps, which want to deploy. surge link
+          generated.
+        </li>
         <li>7- Github</li>
         <li>-- Actions > set up a workflow yourself > main.yml file opened</li>
         <li>-- change github work flow as per need</li>
         <li>** Ymal file **</li>
         <li>-- run-on which OS: windows/unbuntu, better is ubuntu</li>
-<li>-- how to use repo, its public v2</li>
-<li>-- which command wnat to use there.</li>
-<li>--- where to install node , type in uses with its version</li>
-<li>--- where to run. install surge for it</li>      
-<li>--- how to deploy on surge? surge ./ surge-generated link --token {{use generated token}}</li>
-<li>--- in cmd type surge token, copy it, in Github-Repo > Secrets > Generate Secret. save token and use it.</li>
-<li>--- Start Commit yml file, then pull it from github desktop.</li>
-</ul>
+        <li>-- how to use repo, its public v2</li>
+        <li>-- which command wnat to use there.</li>
+        <li>--- where to install node , type in uses with its version</li>
+        <li>--- where to run. install surge for it</li>
+        <li>
+          --- how to deploy on surge? surge ./ surge-generated link --token
+          {{use generated token}}
+        </li>
+        <li>
+          --- in cmd type surge token, copy it, in Github-Repo > Secrets >
+          Generate Secret. save token and use it.
+        </li>
+        <li>--- Start Commit yml file, then pull it from github desktop.</li>
+      </ul>
     </div>
   </body>
 </html>
