--- a/index.html
+++ b/index.html
@@ -11,43 +11,43 @@
     <div>
       <ul style="list-style-type: none">
         <li>1- Use Github for Desktop</li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>
           2- Create "New Repo at desktop". Choose folder where want to create,
           name it. Created.
         </li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>
           3- Push on github. "Click "Publish Repo". Name it or leave default.
           uncheck private if want to publick, Ok . Published
         </li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>4- Work time.</li>
         <li>
           -- Create some file. add some data save it. Its ready for commit
         </li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>5- Github for Desktop</li>
         <li>-- Add meaningful comment.</li>
         <li>-- Cilck commit to main</li>
         <li>-- Select branch, Cilck Push origin. That's it.</li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>
           ** Automate all things > coomit on hithub, auto deploy on surge **
         </li>
         <li>** Webop: build a connection, by using event **</li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>6- Deploy on surge</li>
         <li>-- In cmd type Surge, Check repo is project or not. press enter</li>
         <li>
           -- Change name of repo in small caps, which want to deploy. surge link
           generated.
         </li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>7- Github</li>
         <li>-- Actions > set up a workflow yourself > main.yml file opened</li>
         <li>-- change github work flow as per need</li>
-        <li></li>
+        <li>&nbsp;</li>
         <li>** Ymal file **</li>
         <li>-- run-on which OS: windows/unbuntu, better is ubuntu</li>
         <li>-- how to use repo, its public v2</li>
